--- a/_sass/components/core/_genesis-header.scss
+++ b/_sass/components/core/_genesis-header.scss
@@ -96,7 +96,7 @@
   
   &__title {
     @include genesis-cognition('motive');
-    font-size: clamp(1.125rem, 1rem + 0.5vw, 1.375rem);
+    font-size: clamp(1.125rem, calc(1rem + 0.5vw), 1.375rem);
     font-weight: 600;
     letter-spacing: -0.01em;
     color: oklch(0.95 0.05 280);
